Implemented Transferee Requirements APIs